This version Fixes the Followin problems and Features : 1. Created Progress Bar for User Register page 2. Created Progress Bar for Login Page

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -51,6 +51,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/progressReg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true" />
+
 
 </LinearLayout>
 
