--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -7,32 +7,24 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/Theme.AppCompat.Light"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
-    <TextView
-        android:id="@+id/textViewUserEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" About Us "
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:textAlignment="center" />
-
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" We Are Software Kings "
-        android:layout_marginTop="100dp"
+        android:text="@string/about_text"
+        android:layout_marginTop="47dp"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/homePage"
@@ -43,7 +35,4 @@
         android:layout_marginLeft="136dp"
         android:layout_marginStart="136dp"
         />
-
-
-
 </RelativeLayout>
