--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,45 +9,67 @@
     tools:layout_editor_absoluteX="0dp"
     >
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/Theme.AppCompat.Light"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <Button
         android:id="@+id/btnIC"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="0dp"
         android:layout_marginStart="27dp"
-        android:layout_marginTop="56dp"
         android:text="Ingredient Categories"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintHorizontal_bias="0.481" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginRight="67dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="203dp"
         android:ems="10"
         android:gravity="center"
+        android:hint="Search"
         android:inputType="textPersonName"
-        android:text="Search"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="67dp"
-        android:layout_marginEnd="67dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="125dp"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="67dp"
-        android:layout_marginRight="67dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/savedRecipe"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="35dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginStart="16dp"
         android:onClick="displaySavedRecipe"
         android:text="Saved Recipes"
@@ -95,7 +117,6 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
          />
 
@@ -121,7 +142,6 @@
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
         android:gravity="center"
         android:text="Please make a selection below"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -130,11 +150,8 @@
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="114dp" />
 </android.support.constraint.ConstraintLayout>
