--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_centerHorizontal="true"
@@ -43,7 +45,7 @@
         <Button
             android:layout_margin="15dp"
             android:id="@+id/buttonSignin"
-            android:text="Signup"
+            android:text="Sign In"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -62,8 +64,4 @@
 
 
     </LinearLayout>
-
-
-
-
 </RelativeLayout>
