--- a/app/src/main/res/layout/activity_saved_ingredients.xml
+++ b/app/src/main/res/layout/activity_saved_ingredients.xml
@@ -8,17 +8,26 @@
     android:orientation="vertical"
     >
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/Theme.AppCompat.Light"/>
+
     <EditText
+        android:id="@+id/inputSearch"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inputSearch"
         android:hint="Search Product"
-        android:inputType="textVisiblePassword"/>
+        android:inputType="textVisiblePassword" />
 
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/list_view">
-        ></ListView>
+        </ListView>
 
 </LinearLayout>
