--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -2,17 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- Return the user to the Home activity -->
     <item
-        android:id="@+id/action_logout"
-        android:title="@string/menu_action_logout"
+        android:id="@+id/action_home"
+        android:title="@string/menu_action_home"
         app:showAsAction="never" />
 
+    <!-- Show the user the About Us activity -->
     <item
         android:id="@+id/action_about_us"
         android:title="@string/menu_action_about_us"
         app:showAsAction="never" />
 
-
-
-
+    <!-- Log the user out and return to login activity-->
+    <item
+        android:id="@+id/action_logout"
+        android:title="@string/menu_action_logout"
+        app:showAsAction="never" />
 </menu>
