Add a search button to toolbar with search dialog
Activities with a toolbar now have a search button that opens the ingredients search dialog.
Entering the search query will open the blank Searchable Activity which can eventually display search results.

--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="45dp"
-        android:text="Go to Search" />
+        android:text="@string/btn_continue" />
 
 
 
