--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,56 +20,32 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btnIC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginLeft="27dp"
         android:layout_marginStart="27dp"
         android:text="Ingredient Categories"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintHorizontal_bias="0.481" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginRight="67dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="203dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Search"
-        android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintHorizontal_bias="0.492"
+        android:layout_marginBottom="35dp"
+        app:layout_constraintBottom_toTopOf="@+id/savedRecipe" />
 
     <Button
         android:id="@+id/savedRecipe"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="35dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:onClick="displaySavedRecipe"
         android:text="Saved Recipes"
@@ -117,41 +93,7 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-         />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <SearchView
-        android:layout_width="40dp"
-        android:layout_height="0dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/editText"
-        app:layout_constraintLeft_toRightOf="@+id/btnIC"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="27dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Please make a selection below"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="24sp"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="114dp" />
 </android.support.constraint.ConstraintLayout>
