--- a/app/src/main/res/layout/activity_meat_scroll.xml
+++ b/app/src/main/res/layout/activity_meat_scroll.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         android:elevation="4dp"
