--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -142,7 +142,7 @@
         android:gravity="center"
         android:text="Please make a selection below"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/holo_green_dark"
         android:textSize="24sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
