--- a/app/src/main/res/layout/activity_ingredient_categories.xml
+++ b/app/src/main/res/layout/activity_ingredient_categories.xml
@@ -42,7 +42,7 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/savedRecipe"
+        android:id="@+id/btn_saved_recipes"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
@@ -60,13 +60,13 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_saved_ingr"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="DAIRY"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/savedRecipe"
+        app:layout_constraintTop_toBottomOf="@+id/btn_saved_recipes"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
@@ -85,7 +85,7 @@
         android:text="FRUIT"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/btn_saved_ingr"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
