--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,14 +22,15 @@
         android:layout_alignParentStart="true"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <EditText
         android:id="@+id/et_search_ingr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="240dp"
         android:ems="10"
         android:gravity="center"
@@ -38,7 +39,8 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btn_add_ingr"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp" />
 
     <Button
         android:id="@+id/btn_add_ingr"
@@ -50,18 +52,20 @@
         android:text="@string/btn_add_ingr"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_search_ingr"
         app:layout_constraintLeft_toRightOf="@+id/et_search_ingr"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/btn_ingr_categories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="156dp"
+        android:layout_height="60dp"
         android:text="Ingredient Categories"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="193dp"
-        app:layout_constraintHorizontal_bias="0.502" />
+        android:layout_marginBottom="210dp"
+        app:layout_constraintHorizontal_bias="0.083" />
 
     <Button
         android:id="@+id/btn_saved_recipes"
@@ -131,5 +135,23 @@
         tools:layout_constraintRight_creator="1"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="114dp" />
+
+    <Button
+        android:id="@+id/btn_add_ing"
+        android:layout_width="141dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="47dp"
+        android:layout_marginTop="58dp"
+        android:text="Add Ingredient"
+        app:layout_constraintBottom_toTopOf="@+id/btn_saved_ingr"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/btn_add_ingr"
+        app:layout_constraintRight_toLeftOf="@+id/btn_add_ingr"
+        app:layout_constraintTop_toTopOf="@+id/btn_add_ingr"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
