This version Fixes the Followin problems and Features : 1. Linked the image upload to database in Personal Recipe file

--- a/app/src/main/res/layout/activity_personal_recipe.xml
+++ b/app/src/main/res/layout/activity_personal_recipe.xml
@@ -104,6 +104,12 @@
             android:text="Save"
             android:layout_gravity="center"/>
 
+        <ProgressBar
+            android:id="@+id/progressUpload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
