This version Fixes the Followin problems and Features : 1. Changed Personal Ingredients Layout

--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -32,7 +32,6 @@
         android:layout_height="wrap_content"
         android:text="Home Page"
         android:layout_marginTop="500dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginStart="136dp"
-        />
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
