--- a/app/src/main/res/layout/activity_personal_ingredient.xml
+++ b/app/src/main/res/layout/activity_personal_ingredient.xml
@@ -6,96 +6,113 @@
     android:layout_height="match_parent"
     tools:context="com.example.vincentzhu.testapplication.PersonalIngredient">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="Ingredient Name"
+        android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:text="Ingredient Name" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"/>
 
     <EditText
         android:id="@+id/ing_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView4"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="Description"
         android:layout_below="@+id/ing_name"
-        android:text="Description" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/ing_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView5"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_gravity="center"
+        android:layout_below="@+id/textView5"
+        android:layout_alignStart="@+id/ing_name" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="Type"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/ing_description"
-        android:text="Type" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/ing_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView6"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_below="@+id/textView6"
+        android:layout_alignStart="@+id/ing_description" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/ing_type"
-        android:text="History" />
+        android:text="History"
+        android:layout_marginTop="20dp"
+        android:layout_alignStart="@+id/textView8"
+        android:layout_alignEnd="@+id/textView8" />
 
     <EditText
         android:id="@+id/ing_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView7"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/ing_season" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="Season"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/ing_history"
-        android:text="Season" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/ing_season"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView8"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_below="@+id/textView8"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/firebase_ing_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="Save"
         android:layout_below="@+id/ing_season"
-        android:text="Save" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
 </RelativeLayout>
