Add actions for some Home menu items
Created new activities for the Home activity menu items. Some Home activity buttons are now integrated into the drop-down menu.
Created a FloatingActionButton in Home activity (no functionality yet), possibly to integrate remaining buttons.
Changed toolbar theme to have white text for readability.

--- a/app/src/main/res/layout/activity_ingredients_list.xml
+++ b/app/src/main/res/layout/activity_ingredients_list.xml
@@ -71,7 +71,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:onClick="addIngredient"
-        android:text="@string/btn_add_ingr"
+        android:text="@string/btn_add"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_search_ingr"
         app:layout_constraintLeft_toRightOf="@+id/et_search_ingr"
         app:layout_constraintRight_toRightOf="parent" />
