--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,7 @@
         android:layout_height="56dp"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/Theme.AppCompat.Light"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -47,68 +47,24 @@
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_search"
-        app:layout_constraintTop_toTopOf="@+id/tv_search"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/tv_search"
-        android:layout_marginLeft="8dp" />
-
-    <Button
-        android:id="@+id/btn_ingr_categories"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="Ingredient Categories"
-        app:layout_constraintBottom_toTopOf="@+id/btn_saved_recipes"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
-
-    <Button
-        android:id="@+id/btn_saved_recipes"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:onClick="displaySavedRecipe"
-        android:text="Saved Recipes"
-        app:layout_constraintBottom_toTopOf="@+id/btn_recent_searches"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
-
-    <Button
-        android:id="@+id/btn_saved_ingr"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:onClick="displaySavedIngredients"
-        android:text="Saved Ingredients"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_recipe"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
-    <Button
-        android:id="@+id/btn_recent_searches"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Recent Searches"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btn_add_recipe"
         android:layout_width="160dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Add Recipe"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginLeft="8dp"
+        android:text="@string/btn_add_recipe"
+        app:layout_constraintBottom_toTopOf="@+id/btn_saved_recipes"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp" />
 
     <Button
         android:id="@+id/btn_add_ing"
@@ -121,16 +77,45 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="8dp" />
 
-    <TextView
-        android:id="@+id/tv_search"
+    <Button
+        android:id="@+id/btn_saved_recipes"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_column="0"
+        android:layout_marginLeft="8dp"
+        android:layout_row="1"
+        android:onClick="displaySavedRecipe"
+        android:text="Saved Recipes"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab" />
+
+    <Button
+        android:id="@+id/btn_saved_ingr"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_column="1"
+        android:layout_marginRight="8dp"
+        android:layout_row="1"
+        android:onClick="displaySavedIngredients"
+        android:text="Saved Ingredients"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="16dp"
-        android:text="@string/tv_search"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="29dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
+        app:elevation="4dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/ic_dining_white" />
+
 
 </android.support.constraint.ConstraintLayout>
