--- a/app/src/main/res/layout/activity_meat_scroll.xml
+++ b/app/src/main/res/layout/activity_meat_scroll.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="0dp"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:elevation="4dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
