--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -17,17 +17,17 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_about_us"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/about_text"
-        android:layout_marginTop="47dp"
-        android:textAlignment="center"
         android:layout_below="@+id/toolbar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:text="@string/about_text"
+        android:textAlignment="center" />
 
     <Button
-        android:id="@+id/homePage"
+        android:id="@+id/btn_homepage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Page"
