--- a/app/src/main/res/layout/activity_ingredient_list.xml
+++ b/app/src/main/res/layout/activity_ingredient_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="56dp"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/Theme.AppCompat.Light"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -76,6 +76,18 @@
         app:layout_constraintLeft_toRightOf="@+id/et_search_ingr"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <TextView
+        android:id="@+id/btn_tap_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/hint_tap_remove_ingr"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_search_ingr" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="0dp"
@@ -90,18 +102,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/hint_tap_remove_ingr"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_search_ingr" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_tap_remove" />
 
 </android.support.constraint.ConstraintLayout>
