--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -27,24 +27,25 @@
         android:id="@+id/queryResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result..."
+        android:text="@string/IngredientListResultMessage"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="39dp" />
+        android:layout_marginLeft="27dp" />
 
     <TextView
         android:id="@+id/tv_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="195dp"
+        android:layout_height="419dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintHorizontal_bias="0.121" />
 
 </android.support.constraint.ConstraintLayout>
