--- a/app/src/main/res/layout/activity_saved_ingredients.xml
+++ b/app/src/main/res/layout/activity_saved_ingredients.xml
@@ -25,7 +25,7 @@
         android:inputType="textVisiblePassword" />
 
     <ExpandableListView
-        android:id="@+id/expandableListView"
+        android:id="@+id/savedIngredientListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
