--- a/app/src/main/res/layout/activity_saved_recipe.xml
+++ b/app/src/main/res/layout/activity_saved_recipe.xml
@@ -24,8 +24,8 @@
         android:hint="Search Product"
         android:inputType="textVisiblePassword" />
 
-    <ExpandableListView
-        android:id="@+id/expandableListView"
+    <ListView
+        android:id="@+id/savedRecipeListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
